dept2 news & url encode fixes