@@ -10,17 +10,27 @@ import com.softmotions.ncms.media.MediaResource;
 
 import com.google.inject.Inject;
 
+import org.apache.commons.lang3.StringUtils;
+import org.apache.http.client.utils.URIBuilder;
+import org.apache.http.client.utils.URLEncodedUtils;
 import org.jboss.resteasy.plugins.providers.html.Redirect;
 
+import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
 import javax.ws.rs.GET;
 import javax.ws.rs.NotFoundException;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
+import javax.ws.rs.WebApplicationException;
 import javax.ws.rs.core.Context;
 import javax.ws.rs.core.Response;
+import javax.ws.rs.core.UriBuilder;
+import java.io.IOException;
 import java.net.IDN;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URL;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -43,7 +53,7 @@ public class MediaWikiRS {
             = Pattern.compile("(Image|File|Media):((\\d+)px\\-)?/?(\\d+)/?.*");
 
     private static final Pattern EXT_LINK_REGEXP
-            = Pattern.compile("((Http|Https|Ftp|Smb|Sftp|Scp)://)([^:/]+)([^/]*)(.*)");
+            = Pattern.compile("((Http|Https|Ftp|Smb|Sftp|Scp)://)(.*)");
 
     private static final Pattern CHECK_ENCODED_REGEXP
             = Pattern.compile(".*[^a-zA-Z0-9-_.!~*'()/#%]+.*");
@@ -120,19 +130,25 @@ public class MediaWikiRS {
     @GET
     @Path("link/{spec:(Http|Https|Ftp|Smb|Sftp|Scp)://.*}")
     public Redirect externalLink(@PathParam("spec") String spec,
-                                 @Context HttpServletRequest req) throws Exception {
+                                 @Context HttpServletRequest req,
+                                 @Context HttpServletResponse resp) throws Exception {
 
         Matcher matcher = EXT_LINK_REGEXP.matcher(spec);
         if (!matcher.matches()) {
             throw new BadRequestException();
         }
 
-        Matcher cematcher = CHECK_ENCODED_REGEXP.matcher(matcher.group(5));
-        String path = cematcher.matches() ? Encoder.encodeUrl(matcher.group(5)) : matcher.group(5);
+        URL url;
+        try {
+            url = new URL(spec);
+        } catch (MalformedURLException ignored) {
+            throw new BadRequestException();
+        }
 
-        return new Redirect(new URI(matcher.group(1).toLowerCase()
-                                    + IDN.toASCII(matcher.group(3))
-                                    + matcher.group(4)
-                                    + path));
+        Matcher cematcher = CHECK_ENCODED_REGEXP.matcher(url.getPath());
+        String path = cematcher.matches() ? Encoder.encodeUrl(url.getPath()) : url.getPath();
+
+        return new Redirect(new URL(url.getProtocol(), IDN.toASCII(url.getHost()), url.getPort(),
+                                    path + (!StringUtils.isBlank(url.getQuery()) ? "?" + url.getQuery() : "")).toURI());
     }
 }
